# scan262

./: .gitignore  .typos.toml  Cargo.toml  README.md  build.cjs  data.json  dprint.json  package.json  pnpm-lock.yaml
src/: cli.rs  ctx.rs  feature.rs  features.rs  implementation.rs  lib.rs  main.rs  scanner.rs
src/implementation/: es2016_array_prototype_includes.rs  es2016_exponentiation_operator.rs  es2016_generator_functions_can_t_be_used_with_new.rs  es2016_generator_throw_caught_by_inner_generator.rs  es2016_nested_rest_destructuring_declarations.rs  es2016_nested_rest_destructuring_parameters.rs  es2016_proxy_enumerate_handler_removed.rs  es2016_proxy_internal_calls_array_prototype_includes.rs  es2016_strict_fn_w_non_strict_non_simple_params_is_error.rs  es2017_arguments_caller_removed.rs  es2017_assignments_allowed_in_for_in_head_in_non_strict_mode.rs  es2017_async_functions.rs  es2017_object_prototype_getter_setter_methods.rs  es2017_object_static_methods.rs  es2017_proxy_internal_calls_getter_setter_methods.rs  es2017_reg_exp_u_flag_case_folding.rs  es2017_shared_memory_and_atomics.rs  es2017_string_padding.rs  es2017_trailing_commas_in_function_syntax.rs  es2018_asynchronous_iterators.rs  es2018_object_rest_spread_properties.rs  es2018_promise_prototype_finally.rs  es2018_proxy_own_keys_handler_duplicate_keys_for_non_extensible_targets.rs  es2018_reg_exp_lookbehind_assertions.rs  es2018_reg_exp_named_capture_groups.rs  es2018_reg_exp_unicode_property_escapes.rs  es2018_s_dot_all_flag_for_regular_expressions.rs  es2018_template_literal_revision.rs  es2019_array_prototype_flat_flat_map.rs  es2019_function_prototype_to_string_revision.rs  es2019_json_superset.rs  es2019_object_from_entries.rs  es2019_optional_catch_binding.rs  es2019_string_trimming.rs  es2019_symbol_prototype_description.rs  es2019_well_formed_json_stringify.rs  es2020_big_int.rs  es2020_global_this.rs  es2020_nullish_coalescing_operator.rs  es2020_optional_chaining_operator.rs  (+113 more)
src/meta/: es2016_array_prototype_includes.rs  es2016_exponentiation_operator.rs  es2016_generator_functions_can_t_be_used_with_new.rs  es2016_generator_throw_caught_by_inner_generator.rs  es2016_nested_rest_destructuring_declarations.rs  es2016_nested_rest_destructuring_parameters.rs  es2016_proxy_enumerate_handler_removed.rs  es2016_proxy_internal_calls_array_prototype_includes.rs  es2016_strict_fn_w_non_strict_non_simple_params_is_error.rs  es2017_arguments_caller_removed.rs  es2017_assignments_allowed_in_for_in_head_in_non_strict_mode.rs  es2017_async_functions.rs  es2017_string_padding.rs  (+140 more)
tasks/codegen/: Cargo.toml
tasks/codegen/src/: lib.rs  main.rs
tests/: main.rs
(+1 files in other folders)
