[package]
name = "codegen"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
convert_case = { workspace = true }
prettyplease = { workspace = true }
project-root = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
syn = { workspace = true }
